--- a/simple-todos.html
+++ b/simple-todos.html
@@ -34,7 +34,18 @@
 
 <!-- replace the existing task template with this code -->
 <template name="task">
-  <li class="{{#if checked}}checked{{/if}}">
+
+  {{#if isOwner}}
+    <button class="toggle-private">
+      {{#if private}}
+        Private
+      {{else}}
+        Public
+      {{/if}}
+    </button>
+  {{/if}}
+
+  <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
     <button class="delete">&times;</button>
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
